Moving files around until it feels right (Dan Abramov)

--- a/src/Intro/Intro.stories.mdx
+++ b/src/Intro/Intro.stories.mdx
@@ -1,7 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Design System/Introduction" />
+<Meta title="Introduction" />
 
 # Code Like a Girl's WIP Design System Storybook
 
-This is a bit of a sandbox/ playground at the moment. Over time we'll see it filling out with CLG specific component building blocks!
+This is a bit of a sandbox/ playground at the moment. Over time we'll see it filling out with CLG specific component building blocks.
+
+Write stuff here!
